--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -39,7 +39,7 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest. They are divided into two runs because MindSpore will interfer with Paddle.
+    - name: Test with pytest. They are divided into two runs because MindSpore will interfere with Paddle.
       run: |
         if [ "${{ matrix.python-version }}" != "3.10" ]; then 
           pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py; fi
@@ -76,7 +76,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest. They are divided into two runs because MindSpore will interfer with Paddle.
+      - name: Test with pytest. They are divided into two runs because MindSpore will interfere with Paddle.
         run: |
           pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
           pytest --cov=pygmtools --cov-report=xml --cov-append
@@ -108,7 +108,7 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest. They are divided into two runs because MindSpore will interfer with Paddle.
+      - name: Test with pytest. They are divided into two runs because MindSpore will interfere with Paddle.
         run: |
           pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
           pytest --cov=pygmtools --cov-report=xml --cov-append
