--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
     - uses: actions/checkout@v2
@@ -27,6 +27,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install wheel
         pip install cython
+        pip install setuptools
     - name: Build package
       run: python setup.py sdist
     - name: Upload new version to PyPI
@@ -40,7 +41,7 @@ jobs:
 
   linux:
     needs: deploy
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
@@ -55,7 +56,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r docs/publish_req.txt
+        pip install -r pygmtools/publish_requirements.txt
     - name: Build Wheel
       run: |
         python setup.py bdist_wheel
@@ -85,7 +86,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/publish_req.txt
+          pip install -r pygmtools/publish_requirements.txt
       - name: Build Wheel
         run: |
           python setup.py bdist_wheel
@@ -114,7 +115,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r docs/publish_req.txt
+          pip install -r pygmtools/publish_requirements.txt
       - name: Build Wheel
         run: |
           python setup.py bdist_wheel
