--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -30,6 +30,8 @@ jobs:
         python -m pip install flake8 pytest-cov
         if [ -f tests/requirements.txt ]; then pip install -r tests/requirements.txt; fi
         if [ "${{ matrix.python-version }}" != "3.10" ]; then pip install mindspore==2.0.0; fi
+        wget http://nz2.archive.ubuntu.com/ubuntu/pool/main/o/openssl/libssl1.1_1.1.1f-1ubuntu2.19_amd64.deb
+        dpkg -i libssl1.1_1.1.1f-1ubuntu2.19_amd64.deb
     - name: Generate astar.so
       run: |
         python pygmtools/c_astar_src/build_c_astar.py
@@ -46,7 +48,7 @@ jobs:
         pytest --cov=pygmtools --cov-report=xml --cov-append
     - name: Upload to codecov
       uses: codecov/codecov-action@v3
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.9
 
   macos:
 
