--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,19 +1,20 @@
+--find-links https://www.paddlepaddle.org.cn/whl/linux/mkl/avx/stable.html
+
 requests>=2.25.1
 scipy>=1.4.1
 Pillow==9.2.0
 numpy==1.24.0
 easydict>=1.7
-paddlepaddle==3.1.1
-protobuf==3.20.3
+paddlepaddle==2.4.1
+protobuf==3.19.5
 torch
 torch_geometric
 tqdm
 jittor==1.3.5.37
 appdirs>=1.4.4
-tensorflow==2.15.0
+tensorflow==2.9.3
 distro
 cython
 aiohttp
 async-timeout
 networkx==2.8.8
-
