--- a/tests/requirements_win_mac.txt
+++ b/tests/requirements_win_mac.txt
@@ -1,9 +1,11 @@
+--find-links https://www.paddlepaddle.org.cn/whl/windows/mkl/avx/stable.html
+
 requests>=2.25.1
 scipy>=1.4.1
 Pillow==9.2.0
 numpy==1.24.0
 easydict>=1.7
-paddlepaddle==3.1.1
+paddlepaddle==2.4.1
 protobuf==3.19.5
 torch
 torch_geometric
