--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -48,38 +48,38 @@ jobs:
       uses: codecov/codecov-action@v3
       if: matrix.python-version == 3.9
 
-  macos:
-
-    runs-on: macos-14
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: [ "3.9" ]
-
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install flake8 pytest-cov
-          pip install -r tests/requirements_win_mac.txt
-      - name: generate astar.so
-        run: |
-          python pygmtools/c_astar_src/build_c_astar.py
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest. They are divided into two runs because MindSpore will interfere with Paddle.
-        run: |
-          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
-          pytest --cov=pygmtools --cov-report=xml --cov-append
+#  macos:
+#
+#    runs-on: macos-14
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        python-version: [ "3.9" ]
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#      - name: Install dependencies
+#        run: |
+#          python -m pip install --upgrade pip
+#          python -m pip install flake8 pytest-cov
+#          pip install -r tests/requirements_win_mac.txt
+#      - name: generate astar.so
+#        run: |
+#          python pygmtools/c_astar_src/build_c_astar.py
+#      - name: Lint with flake8
+#        run: |
+#          # stop the build if there are Python syntax errors or undefined names
+#          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+#          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+#      - name: Test with pytest. They are divided into two runs because MindSpore will interfere with Paddle.
+#        run: |
+#          pytest --cov=pygmtools --cov-report=xml --backend=mindspore tests/test_classic_solvers.py
+#          pytest --cov=pygmtools --cov-report=xml --cov-append
 
   windows:
 
